src/static/scss/interface.scss
@import "mixins";
@import "const";

#tableToggle {

    position: absolute;
    left: -35px;
    top: 6px;
    z-index: $zIndexInterface;

    &.toggled {
        left: 9px;
        &:before {
            content: "\79";
        }
    }

}

.rightTopIcons {

    position: absolute;
    left: -35px;
    top: 40px;
    z-index: $zIndexInterface;
    @include transition($defaultTransition);

    > .ui {
        display: block;
        color: inherit;
        text-decoration: none;
    }

    &.hidden {
        @include pointer-events(none);
        opacity: 0;
    }

}

#table.active .rightTopIcons {
    top: 6px;
}

#toolbarIcons {

    position: absolute;
    right: 100%;
    bottom: 0;
    z-index: $zIndexInterface;
    text-align: center;
    overflow: visible;
    min-width: 30px;
    @include transition($defaultTransition);
    @include pointer-events(none);

    > * {
        @include pointer-events(all);
    }

    &.hidden {
        bottom: -35px;
    }

}

